--- a/views/home_ins.ejs
+++ b/views/home_ins.ejs
@@ -11,9 +11,12 @@
         <link rel="stylesheet" type="text/css" href="css/Scubalink_CSS_02.css" />
 
         <style>
-            .tour { background: white; }
-            #CONTENT_ON { min-height: -webkit-fill-available; background: #eeeeee; }
+            /*.tour { background: white; }*/
+            /*#CONTENT_ON { min-height: -webkit-fill-available; background: #eeeeee; }*/
+            #CONTENT_ON { min-height: -webkit-fill-available; }
             .side-nav ul li:hover{ background: white; }
+            .tour_image { position: relative; }
+            .tour_image img.tour_background { position: absolute; left: 0; top: 0; }
         </style>
     </head>
 
@@ -24,7 +27,7 @@
 <!--            <span id="btn_search" class="search" style="right: 16px;"><img src="img/search.svg" alt="" /></span>-->
 <!--        </div>-->
 
-        <div class="header header_ins">
+        <div class="header header_ins" style="margin-bottom: 0;">
             <!--현재 페이지-->
             <span class="logo" id="header_profile_name"><%= name %></span>
             <!--메뉴 버튼-->
@@ -64,7 +67,7 @@
                 <li onclick="location.href='/profile_ins';">내 정보</li>
 <!--                <li>알림 설정</li>-->
                 <!-- <li class="none"></li> -->
-                <li onclick="location.href='/notice';">공지사항</li>
+                <li onclick="window.open('https://cafe.naver.com/scubalink');">공지사항</li>
                 <li onclick="location.href='/policy';">약관 및 정책</li>
 <!--                <li onclick="sendEmail();">이메일 보내기</li>-->
 <!--                <li onclick="sendSMS();">문자 보내기</li>-->
@@ -104,13 +107,17 @@
         </div>
 
 <% if( tourList.length == 0 ) { %>
-        <div id="CONTENT_ON" class="hidden">
+        <div id="CONTENT_ON" class="col-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 col-xl-4 col-xl-offset-4 hidden">
 <% } else { %>
-        <div id="CONTENT_ON" class="">
+        <div id="CONTENT_ON" class="col-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 col-xl-4 col-xl-offset-4">
 
     <% for(var i=0; i<tourList.length; i++) { %>
             <div class="tour">
-                <div class="tour_image" onclick="location.href='/tour/<%= tourList[i]._id %>';"><img src="<% if( !locals.tourList[i].image || tourList[i].image == undefined || tourList[i].image == '' ) { %>/img/blank_tour.png<% } else { %><%= tourList[i].image %><% } %>" alt="" /></div>
+                <div class="tour_image" onclick="location.href='/tour/<%= tourList[i]._id %>';">
+                    <img class="tour_thumbnail" src="<% if( !locals.tourList[i].image || tourList[i].image == undefined || tourList[i].image == '' ) { %>/img/blank_tour.png<% } else { %><%= tourList[i].image %><% } %>" alt="...">
+                    <img class="tour_background" src="<% if( !locals.tourList[i].image || tourList[i].image == undefined || tourList[i].image == '' ) { %>/img/blank_tour.png<% } else { %><%= tourList[i].image %><% } %>" alt="...">
+<!--                    <img src="<% if( !locals.tourList[i].image || tourList[i].image == undefined || tourList[i].image == '' ) { %>/img/blank_tour.png<% } else { %><%= tourList[i].image %><% } %>" alt="" />-->
+                </div>
 
                 <% if( tourList[i].participant_count >= tourList[i].member || tourList[i].status == 'FINISH' || (new Date(parseInt(tourList[i].startdate.substr(0,4)), parseInt(tourList[i].startdate.substr(4,2))-1, parseInt(tourList[i].startdate.substr(6,2)))).getTime() < (new Date()).getTime() ) { %>
                     <div class="tour_bar tour_complete" onclick="location.href='/tour/<%= tourList[i]._id %>';">
@@ -202,10 +209,17 @@
                     var html = "";
                     for( var i=0; i<result.tourList.length; i++ ) {
                         html += " <div class='tour'>";
-                        if( result.tourList[i].image == undefined || result.tourList[i].image == "" )
-                            html += " <div class='tour_image' onclick='location.href=\"/tour/"+result.tourList[i]._id+"\";'><img src='/img/blank_tour.png' alt='' /></div>";
-                        else
-                            html += " <div class='tour_image' onclick='location.href=\"/tour/"+result.tourList[i]._id+"\";'><img src='"+result.tourList[i].image+"' alt='' /></div>";
+                        if (result.tourList[i].image === null || result.tourList[i].image === undefined || result.tourList[i].image === '') {
+                            html += " <div class='tour_image' onclick='location.href=\"/tour/" + result.tourList[i]._id + "\";'>";
+                            html += "   <img class='tour_thumbnail' src='/img/blank_tour.png' alt='' />";
+                            html += "   <img class='tour_background' src='/img/blank_tour.png' alt='' />";
+                            html += " </div>";
+                        } else {
+                            html += " <div class='tour_image' onclick='location.href=\"/tour/" + result.tourList[i]._id + "\";'>";
+                            html += "   <img class='tour_thumbnail' src='" + result.tourList[i].image + "' alt='' />";
+                            html += "   <img class='tour_background' src='" + result.tourList[i].image + "' alt='' />";
+                            html += " </div>";
+                        }
 
                         if (result.tourList[i].participant_count >= result.tourList[i].member || result.tourList[i].status === 'FINISH' || (new Date(parseInt(result.tourList[i].startdate.substr(0,4)), parseInt(result.tourList[i].startdate.substr(4,2))-1, parseInt(result.tourList[i].startdate.substr(6,2)))).getTime() < (new Date()).getTime()) {
                             html+= "      <div class='tour_bar tour_complete' onclick='location.href=\"/tour/"+result.tourList[i]._id+"\";'>";
