--- a/views/join_bgn_01.ejs
+++ b/views/join_bgn_01.ejs
@@ -7,11 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         <link rel="stylesheet" type="text/css" href="css/Scubalink_CSS.css" />
+        <link rel="stylesheet" type="text/css" href="css/Scubalink_CSS_02.css" />
         <style>
-            #input_tel {
-                width: 246px;
-                border: solid 1px #979797;
-            }
+            * { box-sizing: border-box; }
+            #input_name { height: 38px; font-size: 14px; }
+            #input_tel, #input_email { width: 100%; }
+            .t_left { margin-left: 0; }
         </style>
 
         <title>스쿠버 링크 : 회원가입</title>
@@ -20,7 +21,7 @@
     <body id="join" class="trainee">
         <div id="header">
             <button id="btn_back" type="button" class="btn_ic">
-                <i class="btn_prev" id="prevBtn"> </i>
+                <i class="btn_prev"> </i>
             </button>
 
             <div class="step">
