--- a/views/join_bgn_02.ejs
+++ b/views/join_bgn_02.ejs
@@ -9,6 +9,14 @@
         <title>스쿠버 링크 : 회원가입</title>
 
         <link rel="stylesheet" type="text/css" href="css/Scubalink_CSS.css" />
+        <link rel="stylesheet" type="text/css" href="css/Scubalink_CSS_02.css" />
+        <style>
+            * { box-sizing: border-box; }
+            #input_height, #input_weight, #input_foot, #input_disease { height: 36px; }
+            #input_height, #input_weight, #input_foot { border: none; }
+            #input_disease { font-size: 14px; }
+            .t_left { margin-left: 0; }
+        </style>
     </head>
 
     <body id="join" class= "trainee">
