--- a/views/join_bgn_03.ejs
+++ b/views/join_bgn_03.ejs
@@ -9,6 +9,12 @@
         <title>스쿠버 링크 : 회원가입</title>
 
         <link rel="stylesheet" type="text/css" href="css/Scubalink_CSS.css" />
+        <link rel="stylesheet" type="text/css" href="css/Scubalink_CSS_02.css" />
+        <style>
+            * { box-sizing: border-box; }
+            #input_count { border: none; height: 36px; }
+            .t_left { margin-left: 0; }
+        </style>
     </head>
 
 
