--- a/views/join_ins.ejs
+++ b/views/join_ins.ejs
@@ -9,11 +9,12 @@
         <title>스쿠버 링크 : 회원가입</title>
 
         <link rel="stylesheet" type="text/css" href="css/Scubalink_CSS.css" />
+        <link rel="stylesheet" type="text/css" href="css/Scubalink_CSS_02.css" />
         <style>
-            #input_tel {
-                width: 246px;
-                border: solid 1px #979797;
-            }
+            * { box-sizing: border-box; }
+            #input_name { height: 38px; font-size: 14px; }
+            #input_tel, #input_email { width: 100%; }
+            .t_left { margin-left: 0; }
         </style>
     </head>
 
