--- a/views/tour_participant.ejs
+++ b/views/tour_participant.ejs
@@ -48,15 +48,24 @@
                 <% } else { %>
                     <p><% if (participant[i].gender == 1) { %>남성<% } else { %>여성<% } %>/<%= participant[i].height %>cm/<%= participant[i].weight %>kg/<%= participant[i].foot %>mm<% if (participant[i].disease != undefined && participant[i].disease != "") { %>/<%= participant[i].disease %><% } %></p>
                 <% } %>
-                <div class="participant_memo <% if (participant[i].memo == undefined) { %>signout<% } %>">
-                    <% if (participant[i].memo == undefined || participant[i].memo == "") { %>
+
+                <% if (participant[i].memo == undefined) { %>
+                    <div class="participant_memo signout">
+                        <p class="participant_memo_empty">현재 교육생이 아닙니다</p>
+                        <pre class="participant_memo_text hidden" style="white-space: pre-wrap; background: white;"></pre>
+                    </div>
+                <% } else if (participant[i].memo == "") { %>
+                    <div class="participant_memo">
                         <p class="participant_memo_empty">메모없음</p>
                         <pre class="participant_memo_text hidden" style="white-space: pre-wrap; background: white;"></pre>
-                    <% } else { %>
+                    </div>
+                <% } else { %>
+                    <div class="participant_memo">
                         <p class="participant_memo_empty hidden">메모없음</p>
                         <pre class="participant_memo_text" style="white-space: pre-wrap; background: white;"><%= participant[i].memo %></pre>
-                    <% } %>
-                </div>
+                    </div>
+                <% } %>
+
                 <div class="participant_memo_edit hidden">
                     <textarea class="form-control autosize input_memo" id="<%= participant[i].id %>" type="<%= participant[i].type %>" placeholder="참여자에게 맞는장비, 기타 사항을 메모하세요"><%= participant[i].memo %></textarea>
                     <p id="textarea_explain">400자 제한</p>
